Kitodo Core code formatting